--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -37,4 +37,21 @@ rules:
       - patch
       - update
       - watch
+  ##
+  ## Rules for cache.stevejcliu.com/v1alpha1, Kind: Memcached
+  ##
+  - apiGroups:
+      - cache.stevejcliu.com
+    resources:
+      - memcacheds
+      - memcacheds/status
+      - memcacheds/finalizers
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
 #+kubebuilder:scaffold:rules
