--- a/config/samples/cache_v1alpha1_memcached.yaml
+++ b/config/samples/cache_v1alpha1_memcached.yaml
@@ -1,7 +1,6 @@
-apiVersion: cache.stevejcliu.com/v1alpha1
+apiVersion: cache.example.com/v1alpha1
 kind: Memcached
 metadata:
   name: memcached-sample
 spec:
-  # Add fields here
-  foo: bar
+  size: 3
