--- a/config/samples/cache_v1alpha1_memcached.yaml
+++ b/config/samples/cache_v1alpha1_memcached.yaml
@@ -1,4 +1,4 @@
-apiVersion: cache.example.com/v1alpha1
+apiVersion: cache.stevejcliu.com/v1alpha1
 kind: Memcached
 metadata:
   name: memcached-sample
